--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,8 @@
+@font-face {
+ font-family: "Brandon Grotesque";
+ src: url("fonts/BrandonGrotesque-Regular.ttf")
+}
+
 .logo {
     padding: 25px;
     display: flex;
