--- a/css/index.css
+++ b/css/index.css
@@ -20,12 +20,6 @@ ul > li {
     font-family: "Brandon Grotesque";
     text-transform: uppercase;
 }
-.photogallery {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
 .content-photo > img {
     height: auto;
     max-width: 290px;
@@ -46,6 +40,18 @@ ul > li {
 }
 #main-content {
     margin: 15px 0 25px 0;
+    display: flex;
+    flex-wrap: no-wrap;
+    padding: 0 4px;
+}
+.photogallery {
+    flex: 33%;
+    padding: 0 4px;
+}
+.photogallery > img {
+    margin-top: 8px;
+    vertical-align: middle;
+    max-width: 150px;
 }
 .text-info > p {
     color: black;
@@ -71,51 +77,23 @@ hr {
     border: 1px solid black;
 
 }
-form {
+#contacts-info {
     display: flex;
+    justify-content: center;
     flex-direction: column;
     align-items: center;
-    max-width: 250px;
-    margin: 0 auto;
     font-family: "Brandon Grotesque";
-    text-transform: uppercase;
 }
-input {
-    margin: 10px;
-    width: 220px;
-    border: 1px solid black;
-    border-radius: 5px;
-}
-input[type=submit] {
+.contact-photo {
+    max-width: 300px;
+    max-height: 250px;
     margin: 15px;
-    text-transform: uppercase;
-    background-color: white;
-    color: black;
-    border: 1px solid black;
-    max-width: 250px;
 }
-input[type=submit]:hover {
-    background-color: black;
-    color: white;
-    border: 1px solid black;
+#contacts-info h3 {
+    font-size: 20px;
+    padding: 15px;
 }
-input[type=submit]:active {
-    outline: none;
-}
-textarea {
-    width: 220px;
-    resize: none;
-    border: 1px solid black;
-    border-radius: 5px;
-}
-.contact-me > h1 {
-    font-family: "Brandon Grotesque";
-    text-transform: uppercase;
-    text-align: center;
-}
-.contact-info {
-    text-align: center;
-    font-family: "Brandon Grotesque";
-    text-transform: uppercase;
-
+#contacts-info p {
+    font-size: 15px;
+    padding: 15px;
 }
