--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'Brandon Grotesque';
-    src: url('/fonts/BrandonGrotesque-Regular.eot');
+    src: url('fonts/BrandonGrotesque-Regular.eot');
     src: local('/fonts/Brandon Grotesque Regular'), local('BrandonGrotesque-Regular'),
-        url('/fonts/BrandonGrotesque-Regular.eot?#iefix') format('embedded-opentype'),
-        url('/fonts/BrandonGrotesque-Regular.woff') format('woff'),
-        url('/fonts/BrandonGrotesque-Regular.ttf') format('truetype');
+        url('fonts/BrandonGrotesque-Regular.eot?#iefix') format('embedded-opentype'),
+        url('fonts/BrandonGrotesque-Regular.woff') format('woff'),
+        url('fonts/BrandonGrotesque-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
@@ -30,6 +30,9 @@ ul > li {
 }
 #secondary-info {
     text-align: center;
+}
+h1 {
+    font-size: 35px;
 }
 .text-info {
     display: inline-block;
